--- a/directives/synthControls/synthControls.html
+++ b/directives/synthControls/synthControls.html
@@ -3,17 +3,17 @@
     <div class="section left">
         <span class="title">Oscillators</span>
         <div class="left">
-        <div class="dropDown"
+        <div drop-down-element
              data-list="oscWaveTypes"
              data-return-index="0"
              data-call-back="updateWaveType"
              data-selected="audioService.synthTemplates[audioService.synthIndex].controls.oscillators.type[0]"></div>
-        <div class="dropDown"
+        <div drop-down-element
              data-list="oscWaveTypes"
              data-return-index="1"
              data-call-back="updateWaveType"
              data-selected="audioService.synthTemplates[audioService.synthIndex].controls.oscillators.type[1]"></div>
-        <div class="dropDown"
+        <div drop-down-element
              data-list="oscWaveTypes"
              data-return-index="2"
              data-call-back="updateWaveType"
