spec files added

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <script type="text/javascript" src="js/variables.js"></script>
 
     <!--ELEMENTS------------------------------------------------------------------------------------------------------->
-        <script type="text/javascript" src="elements/knob/knob.js"></script>
-        <script type="text/javascript" src="elements/dropDown/dropDown.js"></script>
+        <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
+        <script type="text/javascript" src="elements/dropDown/dropDown.directive.js"></script>
         <link rel="stylesheet" href="elements/dropDown/dropDown.css">
-        <script type="text/javascript" src="elements/sliderVertical/sliderVertical.js"></script>
+        <script type="text/javascript" src="elements/sliderVertical/sliderVertical.directive.js"></script>
         <link rel="stylesheet" href="elements/sliderVertical/sliderVertical.css">
-        <script type="text/javascript" src="elements/knob/knob.js"></script>
+        <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
 
     <!--DIRECTIVES----------------------------------------------------------------------------------------------------->
         <script type="text/javascript" src="directives/menu/menu.js"></script>
@@ -55,11 +55,11 @@
         <link rel="stylesheet" href="directives/helpWindow/helpWindow.css">
 
     <!--SERVICES------------------------------------------------------------------------------------------------------->
-        <script type="text/javascript" src="js/services/audio.js"></script>
-        <script type="text/javascript" src="js/services/event.js"></script>
-        <script type="text/javascript" src="js/services/hexCanvas.js"></script>
-        <script type="text/javascript" src="js/services/theme.js"></script>
-        <script type="text/javascript" src="js/services/visualizerCanvas.js"></script>
+        <script type="text/javascript" src="js/services/audio.service.js"></script>
+        <script type="text/javascript" src="js/services/event.service.js"></script>
+        <script type="text/javascript" src="js/services/hexCanvas.service.js"></script>
+        <script type="text/javascript" src="js/services/theme.service.js"></script>
+        <script type="text/javascript" src="js/services/visualizerCanvas.service.js"></script>
 
 </head>
 
