--- a/elements/sliderVertical/sliderVertical.html
+++ b/elements/sliderVertical/sliderVertical.html
@@ -1,7 +1,7 @@
-<div class="verticalBarContainer" data-ng-mousedown="movePos($event)" data-ng-style="{height: height + 'px'}">
+<div class="verticalBarContainer" data-ng-mousedown="movePos($event)" data-ng-style="{height: elemSize.height + 'px'}">
     <div class="verticalBar">
         <div class="sliderThumbContainer"
-            data-ng-style="{top: (getSliderValue() * (height-7)) + 'px'}"
+            data-ng-style="{top: (getSliderValue() * (elemSize.height-7)) + 'px'}"
             data-ng-mousedown="startMovingSlider($event)"
             data-ng-dblclick="resetToOriginal()">
             <div class="sliderThumb"></div>
