less update complete

--- a/directives/menu/menu.html
+++ b/directives/menu/menu.html
@@ -1,4 +1,4 @@
-<div class="menuContainer" id="menuContainer">
+<div class="menuContainer verticalScrollBarLight" id="menuContainer">
     <div class="button" data-ng-click="helpButton()">HELP / INFO</div>
     <div class="button" data-ng-click="copierButton()">IMPORT / EXPORT</div>
     <div class="animation middle" data-ng-hide="showHelpScreen">
