--- a/index.html
+++ b/index.html
@@ -24,45 +24,40 @@
      \__\/        \  \::/       \  \:\        \  \:\           \__\/    \  \:\                 \  \:\      \  \::/       \  \:\        \  \:\
                    \__\/         \__\/         \__\/                     \__\/                  \__\/       \__\/         \__\/         \__\/  -->
 
-    <!--LIBRARIES------------------------------------------------------------------------------------------------------>
+    <!-- LIBRARIES -->
+		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
         <script type="text/javascript" src="lib/angular/angular.js"></script>
         <script type="text/javascript" src="lib/tuna/tuna.js"></script>
-
-        <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
         <script type="text/javascript" src="lib/zeroClipboard/ZeroClipboard.js"></script>
 
-    <!--MAIN----------------------------------------------------------------------------------------------------------->
-        <link rel="stylesheet" href="css/main.css">
+    <!-- MAIN -->
         <script type="text/javascript" src="js/controller.js"></script>
         <script type="text/javascript" src="js/functions.js"></script>
         <script type="text/javascript" src="js/variables.js"></script>
 
-    <!--ELEMENTS------------------------------------------------------------------------------------------------------->
+    <!-- ELEMENTS -->
         <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
         <script type="text/javascript" src="elements/dropDown/dropDown.directive.js"></script>
-        <link rel="stylesheet/less" href="elements/dropDown/dropDown.less">
         <script type="text/javascript" src="elements/sliderVertical/sliderVertical.directive.js"></script>
-        <link rel="stylesheet/less" href="elements/sliderVertical/sliderVertical.less">
         <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
 
-    <!--DIRECTIVES----------------------------------------------------------------------------------------------------->
+    <!-- DIRECTIVES -->
         <script type="text/javascript" src="directives/menu/menu.js"></script>
-        <link rel="stylesheet" href="directives/menu/menu.css">
         <script type="text/javascript" src="directives/synthControls/synthControls.js"></script>
-        <link rel="stylesheet/less" href="directives/synthControls/synthControls.less">
         <script type="text/javascript" src="directives/copier/copier.js"></script>
-        <link rel="stylesheet" href="directives/copier/copier.css">
         <script type="text/javascript" src="directives/helpWindow/helpWindow.js"></script>
-        <link rel="stylesheet" href="directives/helpWindow/helpWindow.css">
 
-    <!--SERVICES------------------------------------------------------------------------------------------------------->
+    <!-- SERVICES -->
         <script type="text/javascript" src="js/services/audio.service.js"></script>
         <script type="text/javascript" src="js/services/event.service.js"></script>
         <script type="text/javascript" src="js/services/hexCanvas.service.js"></script>
         <script type="text/javascript" src="js/services/theme.service.js"></script>
         <script type="text/javascript" src="js/services/visualizerCanvas.service.js"></script>
 
-    <script type="text/javascript" src="lib/less.js"></script>
+	<!-- STYLES -->
+		<link rel="stylesheet/less" href="main.less">
+        <script type="text/javascript" src="lib/less.js"></script>
+
 </head>
 
 <body data-ng-controller="hexController" data-ng-style="themeService.themes[themeService.themeIndex].main">
