giure out module/directive injection

--- a/directives/menu/menu.html
+++ b/directives/menu/menu.html
@@ -30,6 +30,6 @@
         </div>
     </div>
 
-    <div class="animation synthControls" data-ng-hide="showHelpScreen"></div>
+    <div synth-controls class="animation" data-ng-hide="showHelpScreen"></div>
 
 </div>
