--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
     <canvas class="visualizerCanvas fullScreen"></canvas>
     <canvas class="hexCanvas fullScreen"></canvas>
-    <div class="menu"></div>
-    <div class="copier" data-ng-show="copierVisible"></div>
-    <div class="helpWindow" data-ng-show="helpWindowVisible"></div>
+    <div menu></div>
+    <div copier data-ng-show="copierVisible"></div>
+    <div help-window data-ng-show="helpWindowVisible"></div>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
