variables file removed and browser/storage services created

--- a/directives/synthControls/synthControls.html
+++ b/directives/synthControls/synthControls.html
@@ -4,17 +4,17 @@
         <span class="title">Oscillators</span>
         <div class="left">
         <div drop-down
-             data-list="oscWaveTypes"
+             data-list="OSC_WAVE_TYPES"
              data-return-index="0"
              data-call-back="updateWaveType"
              data-selected="audioService.synthTemplates[audioService.synthIndex].controls.oscillators.type[0]"></div>
         <div drop-down
-             data-list="oscWaveTypes"
+             data-list="OSC_WAVE_TYPES"
              data-return-index="1"
              data-call-back="updateWaveType"
              data-selected="audioService.synthTemplates[audioService.synthIndex].controls.oscillators.type[1]"></div>
         <div drop-down
-             data-list="oscWaveTypes"
+             data-list="OSC_WAVE_TYPES"
              data-return-index="2"
              data-call-back="updateWaveType"
              data-selected="audioService.synthTemplates[audioService.synthIndex].controls.oscillators.type[2]"></div>
