--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <!-- MAIN -->
         <script type="text/javascript" src="js/controller.js"></script>
         <script type="text/javascript" src="js/functions.js"></script>
-        <script type="text/javascript" src="js/variables.js"></script>
 
     <!-- ELEMENTS -->
         <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
@@ -49,8 +48,10 @@
 
     <!-- SERVICES -->
         <script type="text/javascript" src="js/services/audio.service.js"></script>
+		<script type="text/javascript" src="js/services/browser.service.js"></script>
         <script type="text/javascript" src="js/services/event.service.js"></script>
         <script type="text/javascript" src="js/services/hexCanvas.service.js"></script>
+		<script type="text/javascript" src="js/services/localStorage.service.js"></script>
         <script type="text/javascript" src="js/services/theme.service.js"></script>
         <script type="text/javascript" src="js/services/visualizerCanvas.service.js"></script>
 
