got rid of global functions file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
     <!-- MAIN -->
         <script type="text/javascript" src="js/controller.js"></script>
-        <script type="text/javascript" src="js/functions.js"></script>
 
     <!-- ELEMENTS -->
         <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
@@ -50,6 +49,7 @@
         <script type="text/javascript" src="js/services/audio.service.js"></script>
 		<script type="text/javascript" src="js/services/browser.service.js"></script>
         <script type="text/javascript" src="js/services/event.service.js"></script>
+		<script type="text/javascript" src="js/services/math.service.js"></script>
         <script type="text/javascript" src="js/services/hexCanvas.service.js"></script>
 		<script type="text/javascript" src="js/services/localStorage.service.js"></script>
         <script type="text/javascript" src="js/services/theme.service.js"></script>
