service to factory changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script type="text/javascript" src="lib/zeroClipboard/ZeroClipboard.js"></script>
 
     <!-- MAIN -->
-        <script type="text/javascript" src="js/controller.js"></script>
+        <script type="text/javascript" src="js/hexSynth.controller.js"></script>
 
     <!-- ELEMENTS -->
         <script type="text/javascript" src="elements/knob/knob.directive.js"></script>
@@ -44,6 +44,7 @@
         <script type="text/javascript" src="directives/synthControls/synthControls.js"></script>
         <script type="text/javascript" src="directives/copier/copier.js"></script>
         <script type="text/javascript" src="directives/helpWindow/helpWindow.js"></script>
+		<script type="text/javascript" src="directives/ngRightClick.directive.js"></script>
 
     <!-- SERVICES -->
         <script type="text/javascript" src="js/services/audio.service.js"></script>
