visBubbles factory created

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		<script type="text/javascript" src="directives/ngRightClick.directive.js"></script>
 
     <!-- SERVICES -->
+
+
+
         <script type="text/javascript" src="js/services/audio.service.js"></script>
 		<script type="text/javascript" src="js/services/browser.service.js"></script>
         <script type="text/javascript" src="js/services/event.service.js"></script>
@@ -55,6 +58,10 @@
 		<script type="text/javascript" src="js/services/localStorage.service.js"></script>
         <script type="text/javascript" src="js/services/theme.service.js"></script>
         <script type="text/javascript" src="js/services/visualizerCanvas.service.js"></script>
+
+	<script type="text/javascript" src="js/services/visBubbles.service.js"></script>
+
+
 
 	<!-- STYLES -->
 		<link rel="stylesheet/less" href="main.less">
