visBubbles factory created

--- a/index.html
+++ b/index.html
@@ -47,19 +47,20 @@
 		<script type="text/javascript" src="directives/ngRightClick.directive.js"></script>
 
     <!-- SERVICES -->
-
-
-
         <script type="text/javascript" src="js/services/audio.service.js"></script>
 		<script type="text/javascript" src="js/services/browser.service.js"></script>
         <script type="text/javascript" src="js/services/event.service.js"></script>
 		<script type="text/javascript" src="js/services/math.service.js"></script>
+		<script type="text/javascript" src="js/services/color.service.js"></script>
         <script type="text/javascript" src="js/services/hexCanvas.service.js"></script>
 		<script type="text/javascript" src="js/services/localStorage.service.js"></script>
         <script type="text/javascript" src="js/services/theme.service.js"></script>
         <script type="text/javascript" src="js/services/visualizerCanvas.service.js"></script>
 
-	<script type="text/javascript" src="js/services/visBubbles.service.js"></script>
+	<!-- VISUALIZERS -->
+		<script type="text/javascript" src="js/visualizers/visBubbles.service.js"></script>
+		<script type="text/javascript" src="js/visualizers/visScope.service.js"></script>
+		<script type="text/javascript" src="js/visualizers/visTracer.service.js"></script>
 
 
 
