--- a/app/menu/menu.html
+++ b/app/menu/menu.html
@@ -16,16 +16,16 @@
             <div class="theme {{$index==themeService.themeIndex}}" data-ng-click="changeTheme($index)" data-ng-repeat="item in themeService.themes track by $index">{{item.name}}</div>
             <hr>
             <span class="title">CONTROLS</span>
-            <div class="theme {{$index==eventService.controlsIndex}}" data-ng-click="eventService.controlsIndex = $index" data-ng-repeat="item in eventService.controls track by $index">{{item.name}}</div>
+            <div class="theme {{$index==controlsService.controlsIndex}}" data-ng-click="controlsService.controlsIndex = $index" data-ng-repeat="item in controlsService.controls track by $index">{{item.name}}</div>
             <hr>
             <span class="title">VISUALIZERS</span>
-            <div class="theme {{$index==visualizerCanvasService.visualizerIndex}}" data-ng-click="visualizerCanvasService.visualizerIndex = $index" data-ng-repeat="item in visualizerCanvasService.visualizers track by $index">{{item.name}}</div>
+            <div class="theme {{$index==visualizerService.visualizerIndex}}" data-ng-click="visualizerService.visualizerIndex = $index" data-ng-repeat="item in visualizerService.visualizers track by $index">{{item.name}}</div>
         </div>
     </div>
 
     <div class="synthSelector">
         <span class="title">SYNTH TEMPLATE</span>
-        <div class="button" data-ng-click="changeSynth($index)" data-ng-right-click="resetSynth($index)" data-ng-repeat="item in audioService.synthTemplates track by $index">
+        <div class="button" data-ng-click="changeSynth($index)" data-right-click="resetSynth($index)" data-ng-repeat="item in audioService.synthTemplates track by $index">
             <div class="inner" data-ng-class="{active: $index == audioService.synthIndex, updating: $index == resetIndex}">{{$index == resetIndex ? 'X' : ''}}</div>
         </div>
     </div>
