--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<script type="text/javascript" src="app/visualizer/visualizers/visTracer.service.js"></script>
 
 	<!-- STYLES -->
-		<link rel="stylesheet/less" href="app/main.less">
+		<link rel="stylesheet/less" href="app/app.less">
         <script type="text/javascript" src="lib/less.js"></script>
 
 </head>
