--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<script type="text/javascript" src="services/controls.service.js"></script>
 		<script type="text/javascript" src="services/localStorage.service.js"></script>
 		<script type="text/javascript" src="services/math.service.js"></script>
-		<script type="text/javascript" src="services/theme.service.js"></script>
+		<script type="text/javascript" src="services/menu.service.js"></script>
 
 	<!-- App -->
 		<script type="text/javascript" src="app/hexGrid/hexGrid.directive.js"></script>
@@ -60,7 +60,6 @@
 			<script type="text/javascript" src="app/menu/synthControls/synthControls.directive.js"></script>
 
 		<script type="text/javascript" src="app/visualizer/visualizer.directive.js"></script>
-		<script type="text/javascript" src="app/visualizer/visualizer.service.js"></script>
 			<script type="text/javascript" src="app/visualizer/visualizers/visBubbles.service.js"></script>
 			<script type="text/javascript" src="app/visualizer/visualizers/visScope.service.js"></script>
 			<script type="text/javascript" src="app/visualizer/visualizers/visTracer.service.js"></script>
@@ -71,7 +70,7 @@
 
 </head>
 
-<body data-ng-controller="hexController" data-ng-style="themeService.themes[themeService.themeIndex].main">
+<body data-ng-controller="hexController" data-ng-style="THEMES[menuService.themeIndex].main">
 
     <canvas class="fullScreen" visualizer></canvas>
     <canvas class="fullScreen" hex-grid></canvas>
