--- a/app/menu/menu.html
+++ b/app/menu/menu.html
@@ -13,20 +13,20 @@
 
         <div class="panel right" data-ng-hide="showHelpScreen">
             <span class="title">THEMES</span>
-            <div class="theme {{$index==menuService.themeIndex}}" data-ng-click="changeTheme($index)" data-ng-repeat="item in THEMES track by $index">{{item.name}}</div>
+            <div class="theme {{$index===menuService.themeIndex}}" data-ng-click="changeTheme($index)" data-ng-repeat="item in THEMES track by $index">{{item.name}}</div>
             <hr>
             <span class="title">CONTROLS</span>
-            <div class="theme {{$index==menuService.controlsIndex}}" data-ng-click="menuService.controlsIndex = $index" data-ng-repeat="item in controlsService.controls track by $index">{{item.name}}</div>
+            <div class="theme {{$index===menuService.controlsIndex}}" data-ng-click="menuService.controlsIndex = $index" data-ng-repeat="item in controlsService.controls track by $index">{{item.name}}</div>
             <hr>
             <span class="title">VISUALIZERS</span>
-            <div class="theme {{$index==menuService.visualizerIndex}}" data-ng-click="menuService.visualizerIndex = $index" data-ng-repeat="item in menuService.visualizers track by $index">{{item.name}}</div>
+            <div class="theme {{$index===menuService.visualizerIndex}}" data-ng-click="menuService.visualizerIndex = $index" data-ng-repeat="item in menuService.visualizers track by $index">{{item.name}}</div>
         </div>
     </div>
 
     <div class="synthSelector">
         <span class="title">SYNTH TEMPLATE</span>
         <div class="button" data-ng-click="changeSynth($index)" data-ng-right-click="resetSynth($index)" data-ng-repeat="item in menuService.synthTemplates track by $index">
-            <div class="inner" data-ng-class="{active: $index == menuService.synthIndex, updating: $index == resetIndex}">{{$index == resetIndex ? 'X' : ''}}</div>
+            <div class="inner" data-ng-class="{active: $index === menuService.synthIndex, updating: $index === resetIndex}">{{$index === resetIndex ? 'X' : ''}}</div>
         </div>
     </div>
 
