visualizer service added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<script type="text/javascript" src="services/localStorage.service.js"></script>
 		<script type="text/javascript" src="services/math.service.js"></script>
 		<script type="text/javascript" src="services/menu.service.js"></script>
+		<script type="text/javascript" src="services/visualizer.service.js"></script>
 
 	<!-- App -->
 		<script type="text/javascript" src="app/hexGrid/hexGrid.directive.js"></script>
