--- a/app/menu/menu.html
+++ b/app/menu/menu.html
@@ -19,7 +19,7 @@
             <div class="theme {{$index===menuService.controlsIndex}}" data-ng-click="menuService.controlsIndex = $index" data-ng-repeat="item in controlsService.controls track by $index">{{item.name}}</div>
             <hr>
             <span class="title">VISUALIZERS</span>
-            <div class="theme {{$index===menuService.visualizerIndex}}" data-ng-click="menuService.visualizerIndex = $index" data-ng-repeat="item in menuService.visualizers track by $index">{{item.name}}</div>
+            <div class="theme {{$index===menuService.visualizerIndex}}" data-ng-click="menuService.visualizerIndex = $index" data-ng-repeat="item in visualizerService.visualizers track by $index">{{item.name}}</div>
         </div>
     </div>
 
