--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <script type="text/javascript" src="elements/sliderVertical/sliderVertical.directive.js"></script>
 
     <!-- DIRECTIVES -->
-        <script type="text/javascript" src="directives/copier/copier.js"></script>
-        <script type="text/javascript" src="directives/helpWindow/helpWindow.js"></script>
+        <script type="text/javascript" src="directives/copier/copier.directive.js"></script>
+        <script type="text/javascript" src="directives/helpWindow/helpWindow.directive.js"></script>
 		<script type="text/javascript" src="directives/html/html.directive.js"></script>
 		<script type="text/javascript" src="directives/rightClick/rightClick.directive.js"></script>
 
@@ -56,17 +56,15 @@
 
 	<!-- App -->
 		<script type="text/javascript" src="app/hexGrid/hexGrid.directive.js"></script>
-
 		<script type="text/javascript" src="app/menu/menu.directive.js"></script>
-			<script type="text/javascript" src="app/menu/synthControls/synthControls.directive.js"></script>
-
+		<script type="text/javascript" src="app/menu/synthControls/synthControls.directive.js"></script>
 		<script type="text/javascript" src="app/visualizer/visualizer.directive.js"></script>
-			<script type="text/javascript" src="app/visualizer/visualizers/visBubbles.service.js"></script>
-			<script type="text/javascript" src="app/visualizer/visualizers/visScope.service.js"></script>
-			<script type="text/javascript" src="app/visualizer/visualizers/visTracer.service.js"></script>
+		<script type="text/javascript" src="app/visualizer/visualizers/visBubbles.service.js"></script>
+		<script type="text/javascript" src="app/visualizer/visualizers/visScope.service.js"></script>
+		<script type="text/javascript" src="app/visualizer/visualizers/visTracer.service.js"></script>
 
 	<!-- STYLES -->
-		<link rel="stylesheet/less" href="app/app.less">
+		<link rel="stylesheet/less" href="app/app.controller.less">
         <script type="text/javascript" src="lib/less.js"></script>
 
 </head>
